# evalkit

./: .env.example  .gitignore  README.md  SECURITY.md  evalkit.yaml  pyproject.toml
.evalkit/: baseline.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: PRD.md  architecture.md  design.md  launch-checklist.md  memory.md  phases.md  rules.md  testing.md
evals/: support-bot.yaml
examples/: demo.yaml
scripts/: benchmark.py  demo.py
src/evalkit/: __init__.py  __main__.py  assertions.py  baseline.py  cache.py  cli.py  config.py  cost.py  errors.py  judge.py  logging_setup.py  provider.py  report_json.py  report_junit.py  report_terminal.py  runner.py  suite.py
tests/: conftest.py  test_assertions.py  test_baseline.py  test_cache.py  test_cli.py  test_config.py  test_cost.py  test_judge.py  test_logging.py  test_provider.py  test_report_terminal.py  test_reports.py  test_runner.py  test_smoke.py  test_suite.py
tests/fixtures/: checkout.yaml  pricing.yaml
